@@ -193,6 +193,7 @@ mkdir "C:\%dir%\Firstworks\libexec\sqlrelay"
 mkdir "C:\%dir%\Firstworks\include\sqlrelay\private"
 mkdir "C:\%dir%\Firstworks\bin"
 mkdir "C:\%dir%\Firstworks\etc"
+mkdir "C:\%dir%\Firstworks\etc\sqlrelay.conf.d"
 mkdir "C:\%dir%\Firstworks\var\sqlrelay\cache"
 mkdir "C:\%dir%\Firstworks\var\sqlrelay\debug"
 mkdir "C:\%dir%\Firstworks\var\sqlrelay\log"
